@startuml

title __TMPCLIENT's Class Diagram__\n

  namespace Client {
    class Client.ClientGUI {
    }
  }
  

  namespace Client {
    class Client.MyStreamSocket {
    }
  }
  

  namespace Client {
    class Client.TMPClient {
    }
  }
  

  namespace Client {
    class Client.TMPHelper {
    }
  }
  

  Client.ClientGUI o-- Client.TMPHelper : helper
  Client.MyStreamSocket -up-|> java.net.Socket
  Client.TMPHelper o-- Client.MyStreamSocket : mySocket


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
